QuickCheck<2, ifdef i386 finit, and credit to Simon Beaumont

--- a/README
+++ b/README
@@ -103,3 +103,6 @@ in the Haskell mailing lists for their help.
   avoid the wrong NaNs produced by foreign functions.
 
 - Reiner Pope added support for luSolve, based on (d|z)getrs.
+
+- Simon Beaumont reported the need of QuickCheck<2 and the invalid
+  asm("finit") on ppc.
