--- a/INSTALL
+++ b/INSTALL
@@ -13,46 +13,45 @@ Detailed installation instructions:
 
 INSTALLATION ON WINDOWS ----------------------------------------
 
-1) Download the developer files gsl-1.8-lib.zip from
-   http://gnuwin32.sourceforge.net/packages/gsl.htm
-   and copy the gsl headers folder (under include) to:
-       C:\ghc\ghc.6.x.1\include
-   These headers are also available from:
-       http://perception.inf.um.es/~aruiz/darcs/hmatrix/gsl.zip
+1) Install a recent ghc (e.g. ghc-6.10.3)
 
-2) Copy libgsl.dll, libcblas.dll (from the binaries package gsl-1.8.bin.zip)
-   and liblapack.dll (borrowed from the R system) to the ghc folder, e.g.:
-       C:\ghc\ghc-6.x.x.
-   Rename libcblas.dll to libblas.dll.
-   They are needed to compile programs.
-   These three dlls are available from:
-       http://perception.inf.um.es/~aruiz/darcs/hmatrix/dll1.zip
+2) Install cabal-install. A binary for windows can be obtained from:
 
-2.5) Remove the following functions from the export list of
-     lib/Numeric/GSL/Special/Ellint.hs:
-     ellint_Pcomp_e, ellint_Pcomp, ellint_Dcomp_e, ellint_Dcomp
+   http://www.haskell.org/cabal/release/cabal-install-0.6.2/cabal.exe
 
-3) Install the package as usual:
-       runhaskell Setup.lhs configure
-       runhaskell Setup.lhs build
-       runhaskell Setup.lhs install
+   Put it somewhere in the path, for instance in c:\ghc\ghc-6.10.3\bin
 
-3.5) If configure cannot find ld please see:
-       http://article.gmane.org/gmane.comp.lang.haskell.cafe/32025
+3) Download and uncompress in a temporary location the following file:
 
-4) Copy the dlls available from:
-       http://perception.inf.um.es/~aruiz/darcs/hmatrix/dll2.zip
-   to the working directory or C:\windows\system
-   They are required to run the programs and ghci.
+   http://code.haskell.org/hmatrix/gsl-lapack-windows.zip
 
-5) run the tests
+   It contains a folder, gsl, and four DLL's.
 
-Unfortunately the lapack dll supplied by the R system does not include
-zgels_, zgelss_, and zgees_, so the functions depending on them
-(linearSolveLS, linearSolveSVD, and schur for complex data)
-will produce a "non supported in this OS" runtime error.
+4) Move the gsl folder to C:\ghc\ghc-6.10.3\include
 
-If you find an alternative free and complete lapack.dll which works well
-for this system please let me know.
+5) Move the four DLL's to C:\ghc\ghc-6.10.3\bin
 
-The examples using graphics do not yet work in windows.
+6) Download and uncompress hmatrix-x.y.z.tar.gz from Hackage:
+
+   http://hackage.haskell.org/cgi-bin/hackage-scripts/package/hmatrix
+
+7) Edit hmatrix.cabal:
+
+     line 17:      build-type:         Custom
+     change to:    build-type:         Simple
+
+     line 160:     extra-libraries:
+     add:          extra-libraries: libgls-0 blas lapack
+
+     line 161:     extra-lib-dirs:
+     add:          extra-lib-dirs: c:\ghc\ghc-6.10.3\bin
+
+8) Open a terminal, cd to the hmatrix folder, and run
+
+   > cabal install
+
+9) If everything is ok we can run the tests:
+
+   > runhaskell examples\tests.hs
+
+NOTE: The examples using graphics do not yet work in windows.
