--- a/INSTALL
+++ b/INSTALL
@@ -41,7 +41,7 @@ INSTALLATION ON WINDOWS ----------------------------------------
      change to:    build-type:         Simple
 
      line 160:     extra-libraries:
-     add:          extra-libraries: libgls-0 blas lapack
+     add:          extra-libraries: libgsl-0 blas lapack
 
      line 161:     extra-lib-dirs:
      add:          extra-lib-dirs: c:\ghc\ghc-6.10.3\bin
