--- a/INSTALL
+++ b/INSTALL
@@ -40,11 +40,10 @@ INSTALLATION ON WINDOWS ----------------------------------------
      line 17:      build-type:         Custom
      change to:    build-type:         Simple
 
-     line 162:     extra-libraries:
-     add:          extra-libraries: libgsl-0 blas lapack
+     and at the end of the file add:
 
-     line 163:     extra-lib-dirs:
-     add:          extra-lib-dirs: c:\ghc\ghc-6.10.3\bin
+        extra-libraries: libgsl-0 blas lapack
+        extra-lib-dirs: c:\ghc\ghc-6.10.3\bin
 
 8) Open a terminal, cd to the hmatrix folder, and run
 
