--- a/README
+++ b/README
@@ -115,3 +115,5 @@ in the Haskell mailing lists for their help.
 - Tracy Wadleigh improved the definitions of (|>) and (><), which now
   apply an appropriate 'take' to the given lists so that they may be
   safely used on lists that are too long (or infinite).
+
+- Chris Waterson improved the configure.hs program for OS/X.
