--- a/INSTALL
+++ b/INSTALL
@@ -4,8 +4,8 @@
 
 INSTALLATION
 
-Recommended method:
-    $ sudo apt-get install libgsl0-dev refblas3-dev lapack3-dev atlas3-[your arch]-dev
+Recommended method (ok in Ubuntu/Debian systems):
+    $ sudo apt-get install libgsl0-dev liblapack-dev
     $ cabal install hmatrix
 
 Detailed installation instructions:
