--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,14 @@
-0.7.3.0
+0.8.0.0
 =======
 
-- added sv, fullSVD, thinSVD, compactSVD, leftSV, rightSV
+- singularValues, fullSVD, thinSVD, compactSVD, leftSV, rightSV
   and complete interface to [d|z]gesdd.
   Algorithms based on the SVD of large matrices can now be
   significantly faster.
+
+- eigenvalues, eigenvaluesSH
+
+- linearSolveLS, rq
 
 0.7.2.0
 =======
