--- a/README
+++ b/README
@@ -50,8 +50,8 @@ KNOWN PROBLEMS / BUGS -------------------------------
 
 ACKNOWLEDGEMENTS -----------------------------------------------------
 
-I thank Don Stewart, Henning Thielemann, Bulat Ziganshin and all the people
-in the Haskell mailing lists for their help.
+I thank Don Stewart, Henning Thielemann, Bulat Ziganshin, Heinrich Apfelmus,
+and all the people in the Haskell mailing lists for their help.
 
 - Nico Mahlo discovered a bug in the eigendecomposition wrapper.
 
@@ -109,3 +109,4 @@ in the Haskell mailing lists for their help.
 
 - Jean-Francois Tremblay discovered an error in the tutorial.
 
+- Heinrich Apfelmus fixed hmatrix.cabal for OS/X.
