--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
 0.9.2.0
 =======
 
-Added GSL Nonlinear Least-Squares fitting using Levenberg-Marquardt.
+- cholSolve
+
+- GSL Nonlinear Least-Squares fitting using Levenberg-Marquardt.
 
 0.9.1.0
 =======
