--- a/THANKS
+++ b/THANKS
@@ -67,3 +67,6 @@ and all the people in the Haskell mailing lists for their help.
 
 - Ozgur Akgun suggested better symbols for the Bound constructors in the
   Linear Programming package.
+
+- Tim Sears reported the zgesdd problem also in intel mac.
+
