--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 0.9.2.0
 =======
 
+- toBlocks, toBlocksEvery
+
 - cholSolve, mbCholSH
 
 - GSL Nonlinear Least-Squares fitting using Levenberg-Marquardt.
