--- a/THANKS
+++ b/THANKS
@@ -91,3 +91,6 @@ module reorganization, monadic mapVectorM, and many other improvements.
 - Carter Schonwald helped with the configuration for Homebrew OS X and
   found a tolerance problem in test "1E5 rots".
 
+- Duncan Coutts reported a problem with configure.hs and contributed
+  a solution.
+
