--- a/THANKS
+++ b/THANKS
@@ -92,5 +92,5 @@ module reorganization, monadic mapVectorM, and many other improvements.
   found a tolerance problem in test "1E5 rots".
 
 - Duncan Coutts reported a problem with configure.hs and contributed
-  a solution.
+  a solution and a simplified a Setup.lhs.
 
