--- a/THANKS
+++ b/THANKS
@@ -89,8 +89,9 @@ module reorganization, monadic mapVectorM, and many other improvements.
   helped with the configuration.
 
 - Carter Schonwald helped with the configuration for Homebrew OS X and
-  found a tolerance problem in test "1E5 rots".
+  found a tolerance problem in test "1E5 rots". He also discovered
+  a bug in the signature of cmap.
 
 - Duncan Coutts reported a problem with configure.hs and contributed
-  a solution and a simplified a Setup.lhs.
+  a solution and a simplified Setup.lhs.
 
