--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,31 @@
+0.16.0.0
+--------
+
+    * join renamed to vjoin
+    
+    * dot renamed to udot (unconjugated dot product)
+    * Removed (<.>)
+    
+    * added cdot, which conjugates the first input vector
+    * the operator (⋅) = cdot is available from Numeric.LinearAlgebra.Util
+    
+    * added a general multiplication operator (×)
+    
+    * Plot functions moved to Numeric.LinearAlgebra.Util
+    * removed (!) (use (¦) instead)
+    
+This version introduces a few backward incompatible changes but the code can be
+updated very easily:
+
+join ->  vjoin
+dot  ->  udot
+<.>  ->  ×
+import Graphics.Plot -> import Numeric.LinearAlgebra.Util
+
+The new contraction operator (×) performs matrix products, matrix-vector products,
+unconjugated vector dot products, and scaling of vectors and matrices.
+
+
 0.15.2.0
 --------
 
