--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,16 +1,23 @@
 0.16.0.0
 --------
 
-    * join deprecated, use vjoin
-    * dot and (<.>) deprecated, use udot or (<>)
+    * Added more organized reexport modules:
+      Numeric.HMatrix, Numeric.HMatrix.Data, Numeric.HMatrix.Devel
+      (The documentation is hidden for the other modules,
+       but they continue to be exposed and are not deprecated)
 
+    * join deprecated, use vjoin
+
+    * dot and (<.>) deprecated, use udot or (×)
     * added udot (unconjugated dot product)
     * added (·) = cdot, which conjugates the first input vector
     
-    * more general multiplication operator (<>)
+    * added alternative matrix multiplication operator (×)
+    * added Monoid instance for Matrix using matrix product
     
     * improved build and konst
-    
+
+    * simplified LSDiv
     * Plot functions moved to Numeric.LinearAlgebra.Util
     * removed (!) (use (¦))
 
