--- a/packages/base/CHANGELOG
+++ b/packages/base/CHANGELOG
@@ -1,33 +1,45 @@
 0.16.0.0
 --------
 
-    * created hmatrix-base
+    * The modules Numeric.GSL.* have been moved to the new package hmatrix-gsl.
+
+    * The package "hmatrix" now depends only on BLAS and LAPACK and the
+      license has been changed to BSD3.
 
     * Added more organized reexport modules:
-      Numeric.HMatrix, Numeric.HMatrix.Data, Numeric.HMatrix.Devel
-      (The documentation is hidden for the other modules,
-       but they continue to be exposed and are not deprecated)
+        Numeric.HMatrix
+        Numeric.LinearAlgebra.Data
+        Numeric.LinearAlgebra.Devel
 
-    * added support for empty arrays
+      The documentation is now hidden for Data.Packed.*, Numeric.Container, and
+      the other Numeric.LinearAlgebra.* modules, but they continue to be exposed
+      for backwards compatibility.
 
-    * join deprecated, use vjoin
+    * Added support for empty arrays, extending automatic conformability
+      (very useful for construction of block matrices).
 
-    * dot now conjugates the first input vector
-    * added udot (unconjugated dot product)
-    
-    * (<.>) overloaded to matrix and dot products
-    * added Monoid instance for Matrix using matrix product
-    
-    * improved build and konst
+    * Added experimental support for sparse linear systems.
 
-    * improved linspace
-    
-    * improved error messages
-    * more usage examples
+    * Added experimental support for static dimension checking and inference
+      using type-level literals.
 
-    * simplified LSDiv
-    * Plot functions moved to Numeric.LinearAlgebra.Util
-    * removed (!) (use (¦)), added (——)
+    * "join" deprecated (use "vjoin").
+
+    * "dot" now conjugates the first input vector.
+
+    * Added "udot" (unconjugated dot product).
+
+    * Added Monoid instance for Matrix using matrix product.
+
+    * Added a different operator for the matrix-vector product.
+      (available from the new reexport module).
+
+    * Improved "build", "konst", "linspace", "LSDiv", and other small changes.
+
+    * Improved error messages.
+
+    * Added many usage examples in the documentation.
+
 
 0.15.2.0
 --------
